@@ -3,6 +3,7 @@ CHANGELOG Roundcube Webmail
 
 - Fix a couple of warnings on PHP 7.2
 - Fix broken long filenames when using imap4d server - workaround server bug (#6048)
+- Fix so temp_dir misconfiguration prints an error to the log (#6045)
 
 RELEASE 1.3.3
 -------------
